Merge updates to CARLsim-ECJ java files in CARLsim release/3.1.2.  These changes make debugging easier in the even that CARLsim crashes while an EA is running.  I preserved the changes that Siva has made to the ObjectiveFunction interface.  Also added a .gitignore file so that .class files are automatically ignored, and removed a couple binary files from the repo.